# des-pb-nalog

./: .gitignore  README.md
app/: Dockerfile  main.py  pyproject.toml
app/adapters/api/: dependencies.py  route.py  schemas.py
app/adapters/messaging/: logger.py  schemas.py  worker.py
app/adapters/messaging/kafka/: kafka_producer.py
app/adapters/messaging/rabbitmq/: rabbitmq_consumer.py  rabbitmq_producer.py
app/adapters/pb_nalog/http_client/: client_instance.py  http_client.py  schemas.py
app/adapters/pb_nalog/proxy/: proxy_provider.py
app/adapters/schemas/: entities.py
app/config/: logger.py  settings.py
app/domain/: entities.py
app/domain/contracts/pb_nalog/: pb_nalog_client.py
app/domain/contracts/proxy/: proxy_provider.py
app/domain/use_cases/: exceptions.py  models.py  search_directors.py
app/tests/: conftest.py
app/tests/domain/: test_use_case.py
infra/: .env.example  docker-compose.yml
