[project]
name = "app"
version = "0.1.0"
description = "Service for extracting information about directors and their associated companies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=10.0.1",
    "aiohttp>=3.14.1",
    "aiokafka>=0.14.0",
    "fastapi>=0.139.2",
    "loguru>=0.7.3",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
    "tenacity>=9.1.4",
    "uvicorn>=0.51.0",
]
